--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -107,7 +107,7 @@ body {
 .banner .form .input input {
 	width: 100%;
     outline: none;
-    border: 1px solid #FAFAFA;
+    border: 1px solid #DBDBDB;
     font-size: 15px;
 	font-family: 'Rubik', sans-serif;
     padding: 8px 10px;
@@ -222,6 +222,37 @@ body {
     border: none;
     border-top: 2px solid #171717;
     border-bottom: 2px solid #171717;
+}
+
+.feed h1 {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 300;
+    margin-top: 0px;
+}
+
+.friend-requests > p {
+    font-family: 'Rubik', sans-serif;
+    font-size: 20px;
+}
+
+.friend-requests .options {
+    padding-top: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.friend-requests .options button {
+    width: 100%;
+    padding: 8px 10px;
+    font-size: 15px;
+	font-family: 'Rubik', sans-serif;
+    border: 1px solid #DBDBDB;
+    background-color: #FAFAFA;
+}
+
+.friend-requests .options button:hover, .friend-requests .options button:active {
+    background-color: #171717;
+    color: #FAFAFA;
 }
 
 /*
@@ -386,6 +417,20 @@ body {
     font-family: 'Rubik', sans-serif;
     font-weight: 300;
     margin: 0px;
+}
+
+.add-friend button {
+    width: 100%;
+    padding: 8px 10px;
+    font-size: 15px;
+	font-family: 'Rubik', sans-serif;
+    border: 1px solid #DBDBDB;
+    background-color: #FAFAFA;
+}
+
+.add-friend button:hover:not([disabled]) {
+    background-color: #171717;
+    color: #FAFAFA;
 }
 
 /*
